# test-jig-temperature-fw-rs

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
src/: app.rs  lcd.rs  main.rs
