[package]
authors = ["Shishir Dey <shishirdey241097@gmail.com>"]
name = "test-jig-temperature-fw-rs"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"
test = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-halt = "*"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"
stm32g0xx-hal = {version = "0.2.0", features = ["rt", "stm32g030"]}

[dev-dependencies]
defmt-test = "0.3"

[profile.dev]
opt-level = 's'
codegen-units = 1

[profile.release]
opt-level = 's'
codegen-units = 1
lto = 'fat'
debug = 2
