[package]
authors = ["Shishir Dey <shishirdey241097@gmail.com>"]
name = "test-jig-temperature-fw-rs"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"
test = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "*"
stm32g0xx-hal = {version = "0.2.0", features = ["stm32g030"]}
heapless = "0.8"
micromath = "2"

[profile.dev]
opt-level = 's'
codegen-units = 1

[profile.release]
opt-level = 's'
codegen-units = 1
lto = 'fat'
debug = 2
